--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -11,8 +11,7 @@ jobs:
       - name: Build App
         # This builds a 'payload' which is what an IPA actually is
         run: |
-            xcodebuild -scheme Test -sdk 
-            iphoneos -configuration Release clean build 
+            xcodebuild -scheme Test -sdk iphoneos -configuration Release clean build 
             CODE_SIGN_IDENTITY="" 
             CODE_SIGNING_REQUIRED=NO 
             CODE_SIGNING_ALLOWED=NO
